fix: removed vertical space for images on mobile in blocks with aside image (#866)

--- a/assets/styles/components/_Block.scss
+++ b/assets/styles/components/_Block.scss
@@ -479,6 +479,15 @@ scss/at-extend-no-missing-placeholder */
 		margin-top: 0 !important;
 		margin-bottom: $block-space-sm !important;
 
+		&.image-left,
+		&.image-right {
+
+			.elementor-widget-image .elementor-widget-container {
+				padding-left: 0;
+				padding-right: 0;
+			}
+		}
+
 		&.image-right {
 
 			.elementor-container {
